blueandgrey-small.css
/*Style for whole page below 600px wide*/
html {
  background: #c9dbe9;
  overflow-x: hidden;
}

body {
  margin-left: 0;
  margin-right: 0;
  margin-top: 4em; /* should be the height of nav FIXME */
  background-color: white;
}

h1 {
  color: darkblue;
  background-color: lightgrey;
  font-variant: small-caps;
}

/*Style for the header*/
header h1.title {
  font-size: xx-large;
  text-align: center;
}

header h1.title em {
  font-variant: normal;
  color: grey;
  font-size: x-small;
  font-style: italic;
  text-align: center;
}

header h2.author {
  display: none;
}

header h3.date {
  text-align: center;
  font-size: x-small;
  font-style: italic;
  font-variant: normal;

}

header h3.date:before {
  content: "(rev. ";
}

header h3.date:after {
  content: ")";
}

/*Style for the navigation*/
nav {
  position: fixed;
  background-color: white;
  top: 0;
  border-bottom-width: 1px;
  border-bottom-color: black;
  border-bottom-style: solid;
  width: 100%;
  max-width: 600px;
}

nav ul{
  list-style-type: none;
  margin: 0;
  padding: 0;
  text-align: center;
}

nav li {
  display: inline;
  font-variant: small-caps;
  font-size: small;
}

nav li:before {
  content: " | ";
  padding-left: 0.2em;
  padding-right: 0.2em;
}

nav li:first-child:before {
  content: "";
  float: left;
}

/*Style for the body*/
body h1 {
  font-size: x-large;
  padding-left: 0.1em;
  text-align: center;
}

body h1:before {
  content: "§ ";
}

header h1:before {
  content: "";
}

body h2 {
  font-size: large;
  padding-left: 2em;
  font-weight: normal;
  text-indent: -1em;
  margin-bottom: 0.5em;
}

body p {
  font-style: italic;
  text-indent: -1em;
  padding-left: 3em;
  margin-top: 0.5em;
}

